--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,76 @@
         </div>
     </header>
     <main class="main">
-        
+        <section class="top-slider">
+            <div class="conteiner top-slider__conteiner">
+                <div class="top-slider__inner">
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">
+                                New Season <br>
+                                New Brand Collection
+                            </h3>
+                            <p class="top-slider__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed sapiente veniam
+                                incidunt beatae?
+                            </p>
+                            <a class="top-slider__link button" href="#">
+                                BUY NOW
+                            </a>
+                        </div>
+                        <img src="images/slider/photo.png" alt="slide images" class="top-slider__img">
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">
+                                New Season <br>
+                                New Brand Collection
+                            </h3>
+                            <p class="top-slider__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed sapiente veniam
+                                incidunt beatae?
+                            </p>
+                            <a class="top-slider__link button" href="#">
+                                BUY NOW
+                            </a>
+                        </div>
+                        <img src="images/slider/photo.png" alt="slide images" class="top-slider__img">
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">
+                                New Season <br>
+                                New Brand Collection
+                            </h3>
+                            <p class="top-slider__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed sapiente veniam
+                                incidunt beatae?
+                            </p>
+                            <a class="top-slider__link button" href="#">
+                                BUY NOW
+                            </a>
+                        </div>
+                        <img src="images/slider/photo.png" alt="slide images" class="top-slider__img">
+                    </div>
+                    <div class="top-slider__item">
+                        <div class="top-slider__content">
+                            <h3 class="top-slider__title">
+                                New Season <br>
+                                New Brand Collection
+                            </h3>
+                            <p class="top-slider__text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed sapiente veniam
+                                incidunt beatae?
+                            </p>
+                            <a class="top-slider__link button" href="#">
+                                BUY NOW
+                            </a>
+                        </div>
+                        <img src="images/slider/photo.png" alt="slide images" class="top-slider__img">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="conteiner">
@@ -182,7 +251,7 @@
                     </p>
                     <form class="fopter-top__form" action="#">
                         <input class="footer-top__form-input" type="email" placeholder="Your email address" required>
-                        <button class="footer-top__form-btn" type="submit">Subscribe</button>
+                        <button class="footer-top__form-btn button" type="submit">Subscribe</button>
                     </form>
                 </div>
             </div>
