--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,67 @@
                 </div>
             </div>
         </section>
+        <section class="categories-info">
+            <div class="categories-info__inner">
+                <div class="conteiner">
+                    <div class="info">
+                        <div class="info__item">
+                            <img class="info__item-img" src="images/icons/shipping_img.png" alt="shipping logo">
+                            <h4 class="info__item-title">
+                                Free Shipping Order $100
+                            </h4>
+                            <p class="info__item-text">
+                                Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do #2
+                            </p>
+                        </div>
+                        <div class="info__item">
+                            <img class="info__item-img" src="images/icons/30day_img.png" alt="return logo">
+                            <h4 class="info__item-title">
+                                30 Days Easy Return
+                            </h4>
+                            <p class="info__item-text">
+                                Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do #2
+                            </p>
+                        </div>
+                        <div class="info__item">
+                            <img class="info__item-img" src="images/icons/support_img.png" alt="support icon">
+                            <h4 class="info__item-title">
+                                24/7 Customer Support
+                            </h4>
+                            <p class="info__item-text">
+                                Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do #2
+                            </p>
+                        </div>
+                    </div>
+                    <div class="categories">
+                        <h2 class="title">TOP CATEGORIES</h2>
+                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do #3</div>
+                    </div>
+                    <div class="categories__items">
+                        <div class="categories__item" style="background-image: url('images/content/categories/category_one.png');">
+                            <p class="categories__item-subtitle">Up To 40% Off</p>
+                            <h4 class="categories__item-title">Shoes & Jewellry</h4>
+                            <a class="categories__link" href="#">EXPLORE MORE</a>
+                        </div>
+                        <div class="categories__item" style="background-image: url('images/content/categories/category_two.png');">
+                            <p class="categories__item-subtitle">New Arrival</p>
+                            <h4 class="categories__item-title">Clothes & Accessories</h4>
+                            <a class="categories__link" href="#">EXPLORE MORE</a>
+                        </div>
+                        <div class="categories__item" style="background-image: url('images/content/categories/category_three.png');">
+                            <p class="categories__item-subtitle">Trending Now</p>
+                            <h4 class="categories__item-title">Men’s Fashion</h4>
+                            <a class="categories__link" href="#">EXPLORE MORE</a>
+                        </div>
+                        <div class="categories__item" style="background-image: url('images/content/categories/category_four.png');">
+                            <p class="categories__item-subtitle">Hot Collection</p>
+                            <h4 class="categories__item-title">Girl’s Fashion</h4>
+                            <a class="categories__link" href="#">EXPLORE MORE</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="conteiner">
