--- a/app/index.html
+++ b/app/index.html
@@ -162,26 +162,54 @@
                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do #3</div>
                     </div>
                     <div class="categories__items">
-                        <div class="categories__item" style="background-image: url('images/content/categories/category_one.png');">
+                        <div class="categories__item"
+                            style="background-image: url('images/content/categories/category_one.png');">
                             <p class="categories__item-subtitle">Up To 40% Off</p>
                             <h4 class="categories__item-title">Shoes & Jewellry</h4>
                             <a class="categories__link" href="#">EXPLORE MORE</a>
                         </div>
-                        <div class="categories__item" style="background-image: url('images/content/categories/category_two.png');">
+                        <div class="categories__item"
+                            style="background-image: url('images/content/categories/category_two.png');">
                             <p class="categories__item-subtitle">New Arrival</p>
                             <h4 class="categories__item-title">Clothes & Accessories</h4>
                             <a class="categories__link" href="#">EXPLORE MORE</a>
                         </div>
-                        <div class="categories__item" style="background-image: url('images/content/categories/category_three.png');">
+                        <div class="categories__item"
+                            style="background-image: url('images/content/categories/category_three.png');">
                             <p class="categories__item-subtitle">Trending Now</p>
                             <h4 class="categories__item-title">Men’s Fashion</h4>
                             <a class="categories__link" href="#">EXPLORE MORE</a>
                         </div>
-                        <div class="categories__item" style="background-image: url('images/content/categories/category_four.png');">
+                        <div class="categories__item"
+                            style="background-image: url('images/content/categories/category_four.png');">
                             <p class="categories__item-subtitle">Hot Collection</p>
                             <h4 class="categories__item-title">Girl’s Fashion</h4>
                             <a class="categories__link" href="#">EXPLORE MORE</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="video-fashion">
+            <div class="conteiner">
+                <div class="video-fashion__inner">
+                    <div class="video-fashion__popup" style="background-image: url('images/fash-video-bg.png');">
+                        <a class="video-fashion__play" data-fancybox href="https://youtu.be/MAVMyMYtwoU?si=rM2CtntS2-RSrSM4">
+                            <img src="images/icons/play_btn.png" alt="video play button">
+                        </a>
+                    </div>
+                    <div class="video-fashion__content">
+                        <p class="video-fashion__subtitle">
+                            Winter Collection 20% Off       
+                        </p>
+                        <h3 class="title video-fashion__title">
+                            TRENDING FASHION
+                        </h3>
+                        <p class="video-fashion__text">
+                            Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eLorem ipsum dolor sit amet, consectetur apiscing elit, sed do eLorem ipsum dolor sit amet, consectetur apiscing elit, sed do eLorem ipsum dolor sit amet, consectetur apiscing elit, sed do e
+                        <a class="video-fashion__link" href="#">
+
+                        </a>
                     </div>
                 </div>
             </div>
@@ -192,7 +220,7 @@
             <div class="footer-top">
                 <div class="footer-top__item footer-top__contact">
                     <a class="logo footer-top__logo" href="#">
-                        <img class="logo__img" src="images/logo.png" alt="logo">
+                        <img class="logo__img" src="images/logo.svg" alt="logo">
                     </a>
                     <a class="footer-top__address" href="#">No. 342 - London Oxford Street, 012 United States</a>
                     <a class="footer-top__email" href="mailto:Youremail@gmail.com">Youremail@gmail.com</a>
