added register page

--- a/app/register.html
+++ b/app/register.html
@@ -59,7 +59,7 @@
             <div class="top__conteiner" style="background-image: url('images/register-bg.png');">
                 <div class="conteiner">
                     <h2 class="top__title title">
-                        LOG IN
+                        REGISTER
                     </h2>
                     <div class="breadcrumbs">
                         <ul class="breadcrumbs__list">
@@ -67,11 +67,36 @@
                                 <a class="breadcrumbs__link" href="#">Home</a>
                             </li>
                             <li class="breadcrumbs__item">
-                                <a class="breadcrumbs__link" href="#">Log in</a>
+                                <a class="breadcrumbs__link" href="#">Register</a>
                             </li>
                         </ul>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="modal">
+            <div class="conteiner">
+                <div class="modal__links">
+                    <a class="modal__link modal__link--active" href="#">REGISTER</a>
+                    <a class="modal__link" href="#">LOGIN</a>
+                </div>
+                <form class="modal__form" action="#" >
+                    <label class="modal__label">
+                        User or email address
+                        <input class="modal__input" type="text" required>
+                    </label>
+                    <label class="modal__label">
+                        Password
+                        <input class="modal__input" type="password" required>
+                    </label>
+                    <p class="modal__text">A password will be sent to your email address.</p>
+                    <p class="modal__text">Your personal data will be used to support your expirience throughout this website, to manage access to your account, and for others purposes discribed on our privacy policy</p>
+                    <label class="modal__label">
+                        <input type="checkbox">
+                        Agree with Terms & Conditions
+                    </label>
+                    <button class="modal__btn" type="submit">REGISTER</button>
+                </form>
             </div>
         </section>
     </main>
