--- a/app/page.html
+++ b/app/page.html
@@ -55,7 +55,25 @@
         </div>
     </header>
     <main class="main">
-        
+        <section class="top">
+            <div class="top__conteiner" style="background-image: url('images/register-bg.png');">
+                <div class="conteiner">
+                    <h2 class="top__title title">
+                        REGISTER
+                    </h2>
+                    <div class="breadcrumbs">
+                        <ul class="breadcrumbs__list">
+                            <li class="breadcrumbs__item">
+                                <a class="breadcrumbs__link" href="#">Home</a>
+                            </li>
+                            <li class="breadcrumbs__item">
+                                <a class="breadcrumbs__link" href="#">Register</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="conteiner">
