--- a/app/page.html
+++ b/app/page.html
@@ -80,7 +80,7 @@
             <div class="footer-top">
                 <div class="footer-top__item footer-top__contact">
                     <a class="logo footer-top__logo" href="#">
-                        <img class="logo__img" src="images/logo.png" alt="logo">
+                        <img class="logo__img" src="images/logo.svg" alt="logo">
                     </a>
                     <a class="footer-top__address" href="#">No. 342 - London Oxford Street, 012 United States</a>
                     <a class="footer-top__email" href="mailto:Youremail@gmail.com">Youremail@gmail.com</a>
