--- a/app/product.html
+++ b/app/product.html
@@ -289,7 +289,7 @@
                         </div>
                         <div class="product-tabs__content-item product-tabs__content-item--active" id="tab-3">
                             <div class="comments">
-                                <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
+                                <img class="comments__img" src="images/avatar/rev1.png" alt="avatar">
                                 <div class="comments__content">
                                     <div class="comments__content-top">
                                         <p class="comments__content-name">
@@ -312,7 +312,7 @@
                                 </div>
                             </div>
                             <div class="comments">
-                                <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
+                                <img class="comments__img" src="images/avatar/rev2.png" alt="avatar">
                                 <div class="comments__content">
                                     <div class="comments__content-top">
                                         <p class="comments__content-name">
@@ -335,7 +335,7 @@
                                 </div>
                             </div>
                             <div class="comments">
-                                <img class="comments__img" src="images/avatar/1.jpg" alt="avatar">
+                                <img class="comments__img" src="images/avatar/rev3.png" alt="avatar">
                                 <div class="comments__content">
                                     <div class="comments__content-top">
                                         <p class="comments__content-name">
